# padel

./: .gitignore  README.md  SEARCH_README.md  padel-course.md  pyproject.toml  search.sh
cache/: metadata.json
cache/sections/: 01858287f851e54470834da2e53ecdf3_text-embedding-3-small.pkl  02dadc9c622153b9793170d817a2bfbe_text-embedding-3-small.pkl  03eb7f44d2365d64137f7b02340ecff6_text-embedding-3-small.pkl  0439fdb0089dd6aa32424389527b3358_text-embedding-3-small.pkl  046a22ce3e789ef4eeee51a490f7fb90_text-embedding-3-small.pkl  06073267a579dc1f7f0be593c658445c_text-embedding-3-small.pkl  0749e533b95186925c61c5f6b69a8f71_text-embedding-3-small.pkl  086a285e856cf467135ffc8ee0bf997f_text-embedding-3-small.pkl  08bd8e29b53e18e0c5a3b9d974bdf3eb_text-embedding-3-small.pkl  08cd3a1b25f34578fade4530bc9454cf_text-embedding-3-small.pkl  092f76cb28bc65839a32bcd13ed8714e_text-embedding-3-small.pkl  0a1b30d260ab4e98449b17d4f8a71461_text-embedding-3-small.pkl  0a3e6b503f0459a3a75a77390e8d82b4_text-embedding-3-small.pkl  0b12fbc84a0a1a39fc26940bccbfcfd7_text-embedding-3-small.pkl  0bb1ecf2139109d22c8a489d92c40502_text-embedding-3-small.pkl  0bdf09acd3b9693b899a931c111d3cf4_text-embedding-3-small.pkl  0c86ab0fa5392ab5716b171ce6cc3fe9_text-embedding-3-small.pkl  0e3114aa782905fd0c2e1a3508ea0e65_text-embedding-3-small.pkl  0f4169828b7f82c08a713f87a0e5f42a_text-embedding-3-small.pkl  0f6f76d38662c5a143eb017957481d7f_text-embedding-3-small.pkl  105816c34c6cecbb6dffd3afa7816d67_text-embedding-3-small.pkl  (+398 more)
padel-course/: README.md
src/: __init__.py  semantic_search.py
(+101 files in other folders)
